name:                collections
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/vadimsemenov/university#readme
license:             BSD3
license-file:        LICENSE
author:              Vadim Semenov
maintainer:          semenov@rain.ifmo.ru
copyright:           Copyright: (c) 2016 Vadim Semenov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BinarySearchTree Map Set SetOnMap TreePrinters
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable collections-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , collections
  default-language:    Haskell2010

test-suite collections-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , collections
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vadimsemenov/university/functional-programming-course/hw-3/collections
